Add order by parameter in events.
