# api/swagger.yaml
@@ -289,6 +289,11 @@ paths:
         description: "Text search between events by service"
         required: false
         type: "string"
+      - name: "order"
+        in: "query"
+        description: "Order the events by selected field in descending order"
+        required: false
+        type: "string"
       responses:
         "200":
           description: "A collection of events"
@@ -541,7 +546,7 @@ paths:
       tags:
       - "Category"
       summary: "Services of the category offered by the association"
-      description: "Returns a list of categories"
+      description: "Returns a list of services"
       operationId: "categoriesCategoryIdServicesGET"
       produces:
       - "application/json"
